# gstreamer-WebRTC

./: .gitmodules  CMakeLists.txt  README.md  package-lock.json
examples/client/: CMakeLists.txt  main.cpp
examples/gstOnReact/: test.html
examples/gstreamerReceiver/: CMakeLists.txt  main.cpp
examples/gstreamerSender/: CMakeLists.txt  main.cpp
examples/gstreamerSender_buffer/: CMakeLists.txt  main.cpp
examples/signaling-server/: signaling-server.py
examples/videoStreamSender/: CMakeLists.txt  main.cpp
examples/videoStreamSender/include/: config.h  play_video.h
examples/videoStreamSender/src/: parse_cl.cpp  play_video.cpp
examples/vidrecv-web-server/: README.md  package-lock.json  package.json
examples/vidrecv-web-server/src/: App.tsx
gstreamerSender/: CMakeLists.txt  main.cpp
gstreamerSender_buffer/: main.cpp
